[tool.poetry]
name = "infamous_imps"
version = "0.1.0"
description = "Summer Code Jam Project by Team Infamous Imps"
authors = ["Nikhil John <me@nikz.in>","Arnav","Sigireddy Balasai","Siddhant Mohile","Aniket", "Mercurius13"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nikhiljohn10/infamous-imps"
include = [
   { path = 'LICENSE', format = 'sdist' },
   { path = 'README.md', format = 'sdist' },
   { path = 'tests', format = 'sdist' },
]
packages = [ { include = "infamous_imps" } ]
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
pydantic = "^1.9.1"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
taskipy = "^1.10.2"
pytest = "^7.1.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip = [".gitignore", ".dockerignore"]
multi_line_output = 3

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''

[tool.poetry.scripts]
server = "infamous_imps.server.uvicorn:start"
client = "infamous_imps.client.app:start"

[tool.taskipy.tasks]
test = { cmd = "python -m pytest tests/", help = "Run tests for the project" }
lint = { cmd = "pre-commit run --all-files", help = "Lints the project" }
format = { cmd = "black --check .", help = "Runs the black python formatter" }
precommit = { cmd = "pre-commit install", help = "Installs the pre-commit git hook" }
